--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>HAI</h1>
-</body>
-</html>
+{% extends './base.html' %}
+{% load static %}
+
+    {% block a %}
+        <h2>sfpsñfdl</h2>
+    {% endblock %}
+
+
+
+{% include './footer.html' %}
