--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,6 +59,10 @@
     <h1>Gus Morni</h1>
     <h2>hai</h2>
     {% endblock %}
+    
+    {% block footer %}
+    {% include 'footer.html' %}
+    {% endblock %}
 </body>
 {% block js %}
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
