--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -23,6 +23,6 @@
 <footer id="footer" class="text-black text-center py-4 mt-7">
     <h1>jkxshols</h1>
   <p>
-    &copy; 2023 Justifacil - <small> TruthSeekers </small> <br /> Todos los derechos reservados
+    &copy; 2024 Publicidad - <small> Amadeus Solutions </small> <br /> Todos los derechos reservados
   </p>
 </footer>
