--- a/app/templates/layouts/admin/footer.html
+++ b/app/templates/layouts/admin/footer.html
@@ -3,14 +3,14 @@
 {% block css %}
 
 <style>
-    #footer {
+    /* #footer {
       position: relative;
       bottom: 0;
       width: 100%;
       background-color: #fffb00;
       text-align: center;
       padding: 5px;
-    }
+    } */
     p{
       font-family: Arial;
     }
