--- a/app/templates/layouts/admin/footer.html
+++ b/app/templates/layouts/admin/footer.html
@@ -21,8 +21,16 @@
 
 
 <footer id="footer" class="text-black text-center py-4 mt-7">
-    <h1>jkxshols</h1>
   <p>
     &copy; 2024 Publicidad - <small> Amadeus Solutions </small> <br /> Todos los derechos reservados
   </p>
 </footer>
+
+{% block js %}
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
+    {% endblock %}
