--- a/app/templates/layouts/admin/menu.html
+++ b/app/templates/layouts/admin/menu.html
@@ -23,10 +23,10 @@
             <div class="collapse navbar-collapse justify-content-center align-items-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Página Principal</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Página Principal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Páginas</a>
+                        <a class="nav-link" href="{% url 'paginas' %}">Páginas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Historia</a>
