--- a/app/templates/administrador/paginas/index.html
+++ b/app/templates/administrador/paginas/index.html
@@ -1,17 +1,48 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
+{% block css %}
+<style>
+    .background-image {
+        background-image: url("{% static 'images/card.jpeg' %}");
+        background-size: cover;
+        position: absolute;
+        top: 60px; /* Altura del navbar en base.html */
+        left: 0;
+        width: 100%;
+        height: 50%; /* Ajusta la altura según tus necesidades */
+        z-index: -1;
+    }
+
+    #contenido {
+        margin-top: 290px; /* Espacio entre el navbar y el contenido */
+    }
+    
+</style>
+{% endblock %}
+
+
+{% block header %}
+<header><div class="background-image mb-5"></div></header>
+
+{% endblock %}
+
+
+
+
 {% block contenido %}
-<header>
-    <div>
-        <div>
-            <picture><source media="(max-width: 799px)" data-srcset="https://www.casacostanera.cl/wp-content//uploads/2019/08/Tiendas-movil.jpg" srcset="https://www.casacostanera.cl/wp-content//uploads/2019/08/Tiendas-movil.jpg"></picture>
+
+<div id="contenido" class="container">
+    
+    <div class="row gx-5 text-center border border-4">
+        <div class="col bg-white">
+            <div class="p-3">
+                <h1>Páginas</h1>
+            </div>
         </div>
     </div>
-</header>
-<div class="container mt-5">
-    <h1>Páginas</h1>
-    <div class="row row-cols-1 row-cols-md-4 g-4 mt-4">
+    <div class="row row-cols-1 row-cols-md-4 g-4 mt-5">
         <div class="col">
             <div class="card h-100">
                 <img src="{% static 'images/card.jpeg' %}" class="card-img-top" alt="...">
