--- a/app/templates/layouts/admin/menu.html
+++ b/app/templates/layouts/admin/menu.html
@@ -32,13 +32,13 @@
                         <a class="nav-link" href="#">Historia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="{% url 'nosotros' %}">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Noticias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
                     </li>
                 </ul>
             </div>
