--- a/app/templates/administrador/paginas/index.html
+++ b/app/templates/administrador/paginas/index.html
@@ -95,7 +95,7 @@
 
         <div class="col">
             <div class="card h-100">
-                <img src="{% static 'images/card.jpeg' %}" class="card-img-top card-img-fixed" alt="...">
+                <img src="{% static 'images/P5.jpg' %}" class="card-img-top card-img-fixed" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Página 5</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
