--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -91,7 +91,7 @@
     <!-- Footer -->
 
     {% block footer %}
-    {% include 'layouts/admin/footer.html' %}
+    {% include 'layouts/admin/footer_p.html' %}
     {% endblock %}
 
 </div>
