--- a/app/templates/administrador/contacto/index.html
+++ b/app/templates/administrador/contacto/index.html
@@ -1,1 +1,88 @@
 {% extends 'base.html' %}
+
+
+{% load static %}
+
+
+{% block css %}
+<style>
+    .background-image {
+        background-image: url("{% static 'images/fondo.jpeg' %}");
+        background-size: cover;
+        position: absolute;
+        top: 60px; /* Altura del navbar en base.html */
+        left: 0;
+        width: 100%;
+        height: 50%; /* Ajusta la altura según tus necesidades */
+        z-index: -1;
+    }
+
+    #contenido {
+        margin-top: 290px; /* Espacio entre el navbar y el contenido */
+    }
+
+    .bg-color {
+        background-color: #d7e3fc; /* Establece el color de fondo deseado */
+    }
+    
+</style>
+{% endblock %}
+
+
+{% block header %}
+<header><div class="background-image mb-5"></div></header>
+
+{% endblock %}
+
+
+
+
+{% block contenido %}
+
+<div id="contenido" class="container">
+    
+    <div class="row gx-5 text-center border border-4">
+        <div class="col bg-color">
+            <div class="p-3">
+                <h1>Contáctanos</h1>
+                <p> Estamos atentos a tus dudas o consultas </p>
+
+                <div class="form-floating mb-3">
+                    <input type="name" class="form-control" id="floatingInput"
+                    maxlength="50" placeholder="Caesar" >
+                    <label for="floatingInput">Nombre</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="lastname" class="form-control" id="floatingInput" 
+                    maxlength="50" placeholder="Alexandrovich">
+                    <label for="floatingInput">Apellido</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="floatingInput" 
+                    maxlength="100" placeholder="elzar@gmail.com">
+                    <label for="floatingInput">Correo Electrónico</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="phone" class="form-control" id="floatingInput"
+                    maxlength="12" placeholder="+56 9 0000 0000">
+                    <label for="floatingInput"> Número de Teléfono</label>
+                  </div>
+                  <div class="form-floating">
+                    <textarea class="form-control" placeholder="Déjanos un mensaje"
+                    maxlength="1000" id="floatingTextarea2" style="height: 100px"></textarea>
+                    <label for="floatingTextarea2">Déjenos un mensaje</label>
+                  </div>
+                  <div class="d-grid mt-2 gap-2">
+                    <button class="btn btn-primary" type="button">Enviar</button>
+                   
+                  </div>
+                  
+
+            </div>
+        </div>
+    </div>
+    
+
+    </div>
+</div>
+{% endblock %}
