--- a/app/templates/administrador/paginas/index.html
+++ b/app/templates/administrador/paginas/index.html
@@ -64,7 +64,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Página 1</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio, autem eius cupiditate pariatur nisi. Ex dignissimos aliquid qui. Labore, laudantium aliquam omnis eligendi tempore non repellendus necessitatibus alias eos!</p>
-                    <a href="">Detalles</a>
+                    <a href="{% url 'notfound' %}">Ir a la Página</a>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Página 2</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut beatae itaque cumque aspernatur cum sint voluptatum laudantium repudiandae in qui nemo explicabo, officia aliquam eveniet quae laborum inventore, amet vel.</p>
-                    <a href="">Detalles</a>
+                    <a href="{% url 'notfound' %}">Ir a la Página</a>
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Página 3</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptatibus quaerat. Voluptas sint illo, debitis facilis ipsa aut laudantium optio quis odio obcaecati fugiat provident laboriosam sapiente sequi doloremque excepturi!</p>
-                    <a href="">Detalles</a>
+                    <a href="{% url 'notfound' %}">Ir a la Página</a>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Página 4</h5>
                     <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt distinctio itaque delectus, perferendis placeat rerum, asperiores voluptatum deserunt atque cupiditate aliquam debitis voluptate praesentium quam accusantium nemo maiores ipsum. Atque!</p>
-                    <a href="">Detalles</a>
+                    <a href="{% url 'notfound' %}">Ir a la Página</a>
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Página 5</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe id accusantium quaerat ratione molestiae aperiam enim facilis dolor vel quis, accusamus, vitae aspernatur fuga sed consectetur, voluptas beatae. Quia, deserunt.</p>
-                    <a href="">Detalles</a>
+                    <a href="{% url 'notfound' %}">Ir a la Página</a>
                 </div>
             </div>
         </div>
@@ -116,7 +116,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Página 6</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laboriosam fuga quas ut id, tempore aut excepturi temporibus nihil! Possimus, aliquam. Aperiam tenetur sint nisi esse dolor cum provident soluta?</p>
-                    <a href="">Detalles</a>
+                    <a href="{% url 'notfound' %}">Ir a la Página</a>
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Página 7</h5>
                     <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae harum veniam quisquam blanditiis ad, maiores fuga explicabo omnis debitis consequuntur nesciunt officia dicta dolores tenetur sit ab. Consectetur, cumque veritatis..</p>
-                    <a href="">Detalles</a>
+                    <a href="{% url 'notfound' %}">Ir a la Página</a>
                 </div>
             </div>
         </div>
@@ -136,7 +136,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Página 8</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aliquid nulla vero voluptates eveniet necessitatibus tempore, perferendis reprehenderit non inventore molestiae ullam qui pariatur in doloribus eaque quos magni rem?</p>
-                    <a href="">Detalles</a>
+                    <a href="{% url 'notfound' %}">Ir a la Página</a>
                 </div>
             </div>
         </div>
