--- a/app/templates/layouts/admin/menu.html
+++ b/app/templates/layouts/admin/menu.html
@@ -6,14 +6,20 @@
     {% block css %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <style>
+            /* Aquí puedes agregar estilos personalizados */
+            .navbar-custom {
+                background-color: #f2f6ff; /* Cambia "your_color_here" por el color que desees */
+            }
+        </style>
     {% endblock %}
     <title>Amadeus Solutions</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="../../../static/images/logo.jpg" width="120px">
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img src="../../../static/images/image.png" width="120px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
