--- a/app/templates/administrador/paginas/index.html
+++ b/app/templates/administrador/paginas/index.html
@@ -82,7 +82,8 @@
             <div class="card h-100">
                 <img src="{% static 'images/P3.jpeg' %}" class="card-img-top card-img-fixed" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Página 3</h5>
+                    <h5 class="card-title">Pylearning
+                    </h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptatibus quaerat. Voluptas sint illo, debitis facilis ipsa aut laudantium optio quis odio obcaecati fugiat provident laboriosam sapiente sequi doloremque excepturi!</p>
                     <a href="{% url 'notfound' %}">Ir a la Página</a>
                 </div>
