--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -14,3 +14,129 @@
   .list-group-item:last-child {
     border-bottom: none;
   }
+
+  /*banner lateral*/
+  .banner-lateral {
+    position: fixed;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    background-color: #007bff;
+    color: #fff;
+    padding: 20px;
+    width: 200px;
+    text-align: center;
+    z-index: 1000;
+}
+
+/* Estilos para el texto del banner */
+.banner-lateral h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.banner-lateral p {
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+/* Estilos para el enlace del banner */
+.banner-lateral a {
+    display: inline-block;
+    background-color: #fff;
+    color: #007bff;
+    padding: 8px 16px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.banner-lateral a:hover {
+    background-color: #0056b3;
+    color: #fff;
+}
+.banner-lateral img {
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+.cerrar-anuncio {
+  background-color: #ff6347; /* Cambia el color de fondo según tu preferencia */
+  color: #fff; /* Cambia el color del texto según tu preferencia */
+  border: none;
+  padding: 5px 10px;
+  border-radius: 100%;
+  font-size: 16px;
+  cursor: pointer;
+  position: absolute;
+  top: 10px; /* Ajusta la posición según tu diseño */
+  right: 10px; /* Ajusta la posición según tu diseño */
+  z-index: 1001; /* Asegura que esté por encima del contenido */
+}
+
+.cerrar-anuncio:hover {
+  background-color: #ff443e; /* Cambia el color de fondo al pasar el cursor sobre el botón */
+}
+
+
+/* banner inferior*/
+
+.banner-inferior {
+  position: fixed;
+  bottom: 20px; /* Ajusta la distancia del borde inferior según tu preferencia */
+  left: 0;
+  width: 100%;
+  background-color: #3498db; /* Cambia el color de fondo según tu preferencia */
+  color: #fff; /* Cambia el color del texto según tu preferencia */
+  padding: 20px;
+  text-align: center;
+  z-index: 1000;
+}
+
+.banner-inferior img {
+  width: 100%;
+  max-width: 200px; /* Ajusta el ancho máximo de la imagen según tu preferencia */
+}
+
+.banner-inferior h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.banner-inferior p {
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.banner-inferior a {
+  display: inline-block;
+  background-color: #fff; /* Cambia el color de fondo del botón según tu preferencia */
+  color: #3498db; /* Cambia el color del texto del botón según tu preferencia */
+  padding: 8px 16px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.banner-inferior a:hover {
+  background-color: #0056b3; /* Cambia el color de fondo del botón al pasar el cursor sobre él */
+  color: #fff; /* Cambia el color del texto del botón al pasar el cursor sobre él */
+}
+
+.cerrar-anuncio-btn {
+  background-color: transparent;
+  color: #fff; /* Cambia el color del texto del botón según tu preferencia */
+  border: none;
+  padding: 5px; /* Ajusta el tamaño del botón según tu preferencia */
+  border-radius: 50%; /* Hace que el botón sea un círculo */
+  font-size: 16px;
+  cursor: pointer;
+  position: absolute;
+  top: -20px; /* Ajusta la posición según tu diseño */
+  right: 10px; /* Ajusta la posición según tu diseño */
+  z-index: 1001; /* Asegura que esté por encima del contenido */
+}
+
+.cerrar-anuncio-btn:hover {
+  color: #ccc; /* Cambia el color del texto del botón al pasar el cursor sobre él */
+}
