--- a/app/templates/administrador/paginas/index.html
+++ b/app/templates/administrador/paginas/index.html
@@ -113,7 +113,7 @@
 
         <div class="col">
             <div class="card h-100">
-                <img src="{% static 'images/P6.jpeg' %}" class="card-img-top card-img-fixed" alt="...">
+                <img src="{% static 'images/P6.jpg' %}" class="card-img-top card-img-fixed" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Página 6</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum laboriosam fuga quas ut id, tempore aut excepturi temporibus nihil! Possimus, aliquam. Aperiam tenetur sint nisi esse dolor cum provident soluta?</p>
@@ -123,7 +123,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="{% static 'images/P6.jpeg' %}" class="card-img-top card-img-fixed" alt="...">
+                <img src="{% static 'images/P7.jpeg' %}" class="card-img-top card-img-fixed" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Página 7</h5>
                     <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae harum veniam quisquam blanditiis ad, maiores fuga explicabo omnis debitis consequuntur nesciunt officia dicta dolores tenetur sit ab. Consectetur, cumque veritatis..</p>
@@ -133,7 +133,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="{% static 'images/P6.jpeg' %}" class="card-img-top card-img-fixed" alt="...">
+                <img src="{% static 'images/P7.jpeg' %}" class="card-img-top card-img-fixed" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Página 8</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aliquid nulla vero voluptates eveniet necessitatibus tempore, perferendis reprehenderit non inventore molestiae ullam qui pariatur in doloribus eaque quos magni rem?</p>
