--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -15,13 +15,13 @@
     border-bottom: none;
   }
 
-  /*banner lateral*/
+  /* Banner lateral derecha*/
   .banner-lateral {
     position: fixed;
     top: 50%;
     right: 0;
     transform: translateY(-50%);
-    background-color: #007bff;
+    background-color: #9bbfe5 ;
     color: #fff;
     padding: 20px;
     width: 200px;
@@ -29,7 +29,6 @@
     z-index: 1000;
 }
 
-/* Estilos para el texto del banner */
 .banner-lateral h2 {
     font-size: 20px;
     margin-bottom: 10px;
@@ -40,11 +39,11 @@
     margin-bottom: 20px;
 }
 
-/* Estilos para el enlace del banner */
+/* Enlace del banner */
 .banner-lateral a {
     display: inline-block;
     background-color: #fff;
-    color: #007bff;
+    color: #9bbfe5;
     padding: 8px 16px;
     text-decoration: none;
     border-radius: 5px;
@@ -52,7 +51,7 @@
 }
 
 .banner-lateral a:hover {
-    background-color: #0056b3;
+    background-color: #9bbfe5;
     color: #fff;
 }
 .banner-lateral img {
@@ -61,82 +60,123 @@
     margin-bottom: 10px;
 }
 .cerrar-anuncio {
-  background-color: #ff6347; /* Cambia el color de fondo según tu preferencia */
-  color: #fff; /* Cambia el color del texto según tu preferencia */
+  background-color: #ff6347;
+  color: #fff;
   border: none;
   padding: 5px 10px;
   border-radius: 100%;
   font-size: 16px;
   cursor: pointer;
   position: absolute;
-  top: 10px; /* Ajusta la posición según tu diseño */
-  right: 10px; /* Ajusta la posición según tu diseño */
-  z-index: 1001; /* Asegura que esté por encima del contenido */
+  top: 10px;
+  right: 10px;
+  z-index: 1001;
 }
 
 .cerrar-anuncio:hover {
-  background-color: #ff443e; /* Cambia el color de fondo al pasar el cursor sobre el botón */
+  background-color: #ff443e;
 }
 
-
-/* banner inferior*/
-
-.banner-inferior {
+.banner-lateral-izq {
   position: fixed;
-  bottom: 20px; /* Ajusta la distancia del borde inferior según tu preferencia */
+  top: 50%;
   left: 0;
-  width: 100%;
-  background-color: #3498db; /* Cambia el color de fondo según tu preferencia */
-  color: #fff; /* Cambia el color del texto según tu preferencia */
+  transform: translateY(-50%);
+  background-color: #9bbfe5;
+  color: #fff;
   padding: 20px;
+  width: 250px; 
+  height: auto; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   text-align: center;
   z-index: 1000;
 }
 
-.banner-inferior img {
-  width: 100%;
-  max-width: 200px; /* Ajusta el ancho máximo de la imagen según tu preferencia */
+.banner-lateral-izq .banner-contenido {
+  width: 100%; 
 }
 
-.banner-inferior h2 {
-  font-size: 20px;
-  margin-bottom: 10px;
-}
-
-.banner-inferior p {
-  font-size: 14px;
+.banner-lateral-izq img {
+  width: 80%; 
+  height: auto; 
+  max-height: 60%;
+  border-radius: 5px;
   margin-bottom: 20px;
 }
 
-.banner-inferior a {
+.banner-lateral-izq h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.banner-lateral-izq p {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.banner-lateral-izq a {
   display: inline-block;
-  background-color: #fff; /* Cambia el color de fondo del botón según tu preferencia */
-  color: #3498db; /* Cambia el color del texto del botón según tu preferencia */
+  background-color: #fff;
+  color: #9bbfe5;
   padding: 8px 16px;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s, color 0.3s;
 }
 
-.banner-inferior a:hover {
-  background-color: #0056b3; /* Cambia el color de fondo del botón al pasar el cursor sobre él */
-  color: #fff; /* Cambia el color del texto del botón al pasar el cursor sobre él */
+.banner-lateral-izq a:hover {
+  background-color: #9bbfe5;
+  color: #fff;
 }
 
-.cerrar-anuncio-btn {
-  background-color: transparent;
-  color: #fff; /* Cambia el color del texto del botón según tu preferencia */
-  border: none;
-  padding: 5px; /* Ajusta el tamaño del botón según tu preferencia */
-  border-radius: 50%; /* Hace que el botón sea un círculo */
-  font-size: 16px;
-  cursor: pointer;
-  position: absolute;
-  top: -20px; /* Ajusta la posición según tu diseño */
-  right: 10px; /* Ajusta la posición según tu diseño */
-  z-index: 1001; /* Asegura que esté por encima del contenido */
+@media (max-width: 767px) {
+  .banner-lateral-izq {
+    display: none;
+  }
 }
 
-.cerrar-anuncio-btn:hover {
-  color: #ccc; /* Cambia el color del texto del botón al pasar el cursor sobre él */
+/* Estilos para el banner inferior */
+.banner-inferior {
+  background-image: url("{% static 'images/python.jpg' %}");
+  background-size: cover;
+  background-position: center bottom;
+  padding: 120px 20px;
+  text-align: center;
+  color: #fff;
+}
+
+.banner-contenido {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+}
+
+.banner-contenido h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.banner-contenido p {
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+.banner-contenido a {
+  display: inline-block;
+  background-color: #ff6347;
+  color: #fff;
+  padding: 12px 24px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 18px;
+  transition: background-color 0.3s;
+}
+
+.banner-contenido a:hover {
+  background-color: #ff443e;
 }
