--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,19 +13,28 @@
                 aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
                 aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>    
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="{% static 'images/wallpaper.jpg' %}" class="d-block w-100" alt="First slide">
+                <img src="{% static 'images/comida.jpeg' %}" class="d-block w-100" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/wallpaper2.jpg' %}" class="d-block w-100" alt="Second slide">
+                <img src="{% static 'images/biblioteca.jpeg' %}" class="d-block w-100" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'images/cine.jpg' %}" class="d-block w-100" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
                 </div>
             </div>
@@ -49,7 +58,8 @@
         <p class="fw-light">¿Qué hay de nuevo?</p>
         <div class="row">
             <div class="col-md-8">
-                <img src="{% static 'images/wall.jpeg' %}" class="img-fluid rounded" alt="...">
+                <img src="{% static 'images/mascotas.jpeg' %}" class="img-fluid rounded" alt="..."
+                 style="width: 100%; height: 450px; object-fit: cover; margin-right: 20px;">
             </div>
 
 
@@ -88,19 +98,29 @@
     </div>
 
     <div class="banner-lateral" id="bannerLateral">
-        <button class="cerrar-anuncio" onclick="cerrarAnuncio()">X</button>
-        <img src="{% static 'images/tonona.jpg' %}" alt="Anuncio">
-        <h2>Anuncio Lateral</h2>
-        <p>¡Compra ahora y obtén un 20% de descuento!</p>
-        <a href="#">Comprar ahora</a>
+        <button class="cerrar-anuncio" onclick="cerrarAnuncio(this)">X</button>
+        <img src="{% static 'images/python.jpg' %}" alt="Anuncio">
+        <h2>¿Te interesa la programación?</h2>
+        <p>¡Aprende python con PyLearning!</p>
+        <a href="#">Aprende aquí</a>
     </div>
 
-    <div class="banner-inferior" id="bannerInferior">
-        <button class="cerrar-anuncio-btn" onclick="cerrarAnuncio()">x</button>
-        <img src="{% static 'images/fondo.jpeg' %}" alt="Anuncio">
-        <h2>Anuncio Inferior</h2>
-        <p>¡Compra ahora y obtén un 20% de descuento!</p>
-        <a href="#">Comprar ahora</a>
+    <div class="banner-lateral-izq" id="bannerLateralzq">
+        <button class="cerrar-anuncio" onclick="cerrarAnuncio(this)">X</button>
+        <div class="banner-contenido">
+            <img src="{% static 'images/hamster.jpg' %}" alt="Anuncio">
+            <h2>Mascotas felices, dueños felices</h2>
+            <p>Cuídalos con amor con nuestros productos</p>
+            <a href="#">Ir a la tienda</a>
+        </div>
+    </div>
+
+    <div class="banner-inferior">
+        <div class="banner-contenido">
+            <h2>¡Ordene ahora y disfrute de comida deliciosa en casa!</h2>
+            <p>Explora nuestro menú y descubre una variedad de platillos disponibles para entrega rápida.</p>
+            <a href="#">Ver menú</a>
+        </div>
     </div>
 
     <!-- Footer -->
