--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -102,7 +102,7 @@
         <img src="{% static 'images/python.jpg' %}" alt="Anuncio">
         <h2>¿Te interesa la programación?</h2>
         <p>¡Aprende python con PyLearning!</p>
-        <a href="#">Aprende aquí</a>
+        <a href="{% url 'notfound' %}">Aprende aquí</a>
     </div>
 
     <div class="banner-lateral-izq" id="bannerLateralzq">
@@ -111,7 +111,7 @@
             <img src="{% static 'images/hamster.jpg' %}" alt="Anuncio">
             <h2>Mascotas felices, dueños felices</h2>
             <p>Cuídalos con amor con nuestros productos</p>
-            <a href="#">Ir a la tienda</a>
+            <a href="{% url 'notfound' %}">Ir a la tienda</a>
         </div>
     </div>
 
@@ -119,7 +119,7 @@
         <div class="banner-contenido">
             <h2>¡Ordene ahora y disfrute de comida deliciosa en casa!</h2>
             <p>Explora nuestro menú y descubre una variedad de platillos disponibles para entrega rápida.</p>
-            <a href="#">Ver menú</a>
+            <a href="{% url 'notfound' %}">Ver menú</a>
         </div>
     </div>
 
